ajout page "nous"

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /* 
     Document   : style
-    Created on : 19 avr. 2013, 23:10:54
+    Created on : 22 avr. 2013, 10:54:52
     Author     : Loic
     Description:
-        Purpose of the stylesheet follows.
+        Feuille css page.
 */
 
 html{
     background-color: black;
+    height: 800px;
 }
 
 body{
@@ -30,85 +31,8 @@ section{
 article{
     width: 700px;
     height: 350px;
-    background: url(img/logo1.png) center no-repeat;
-    margin: auto;
 }
 
-footer{
-
+h1{
+    color: white;
 }
-
-.titre{
-    color: yellow;
-    font-family: cursive;
-    margin-top: 20px;
-    text-align: center
-}
-
-.icone{
-    width: 150px;
-    height: 150px;
-    margin-top: 60px;
-    border-width:1px;
-    border-style:solid;
-    border-color:yellow;
-    border-radius: 80px;
-}
-
-.logo{
-    width: 50px;
-    height: 50px;
-    margin-top: 30px;
-}
-
-#fc{
-    display: block;
-    background: url(img/like.png) center no-repeat;
-}
-
-#famille{
-    display: block;
-    background: url(img/famille.jpeg) center no-repeat;
-    float: right;
-    margin-left: 58px;
-}
-
-#tireur{
-    display: block;
-    background: url(img/tireur.png) center no-repeat;
-    float: right;
-    margin-right: 58px;
-    margin-left: 56px;
-}
-
-#entreprise{
-    display: block;
-    background: url(img/entreprise.png) center no-repeat;
-    margin-right: 56px;
-    float: right;
-}
-
-.cadre{
-    width: 150px;
-    color: yellow;
-    font-family: cursive;
-    margin-top: 20px;
-    text-align: center
-}
-
-#famille1{
-    float: right;
-    margin-left: 58px;
-}
-
-#tireur1{
-    float: right;
-    margin-right: 58px;
-    margin-left: 56px;
-}
-
-#entre1{
-    margin-right: 56px;
-    float: left;
-}
-
